--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 3rem;
-  background-color: black;
+  background-color: rgb(252, 252, 252);
   display: flex;
   justify-content: space-between;
 
@@ -10,8 +10,8 @@
       color: white;
       text-decoration: none;
 
-      h2 {
-        font-weight: 400;
+      img {
+        width: 8rem;
       }
     }
   }
@@ -20,13 +20,12 @@
     display: flex;
     flex-direction: row;
     margin: 0.8rem 1rem;
-
+    list-style-type: none;
     li {
       margin: 0 1.7rem;
-
       a {
         text-decoration: none;
-        color: white;
+        color: rgb(0, 0, 0);
       }
     }
   }
