--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,10 @@ body {
 }
 
 h1 {
-  margin: 0.5rem 0;
+  margin: 2rem 0 0.4rem 0;
+  @include breakpoint-down(large) {
+    font-size: 1.5rem;
+  }
 }
 
 h2,
