search city functionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 @import "./styles/components/Header.scss";
 @import "./styles/components/Button.scss";
 @import "./styles/components/SearchBox.scss";
-
+@import "./styles/components/Message.scss";
 // Typography
 @import "./styles/typography";
 
