--- a/src/styles/components/SearchBox.scss
+++ b/src/styles/components/SearchBox.scss
@@ -1,9 +1,24 @@
 .searchbox {
   input {
     background-color: #ececec;
-    height: 1.5rem;
+    color: #818181;
+    font-weight: 500;
+    font-size: 1rem;
+    height: 1.8rem;
     border: none;
     box-shadow: 4px 4px 6px #d4d4d4;
     border-radius: 0.2rem;
+    background-image: url("../../assets/search.svg");
+    background-position: 0.5rem 0.5rem;
+    background-repeat: no-repeat;
+    padding-left: 2rem;
+    &:focus {
+      border: 2px solid rgb(131, 130, 130);
+      outline: none;
+      background-position: 0.5rem 0.4rem;
+    }
+    &::placeholder {
+      color: #979797;
+    }
   }
 }
