--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@
 @import "./styles/components/Button.scss";
 @import "./styles/components/SearchBox.scss";
 @import "./styles/components/Message.scss";
+@import "./styles//components/Footer.scss";
+
 // Typography
 @import "./styles/typography";
 
@@ -20,13 +22,12 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  min-height: 100vh;
 }
 
 h1 {
   margin: 1rem 0 0.4rem 0;
-  @include breakpoint-down(large) {
-    font-size: 1.5rem;
-  }
+  font-size: 2rem;
 }
 
 h2,
@@ -37,8 +38,35 @@ h3 {
   text-transform: uppercase;
 }
 
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+@include breakpoint-down(small) {
+  .buttons {
+    flex-direction: column;
+  }
+}
+
+@include breakpoint-down(small) {
+  h1 {
+    font-size: 1.2rem;
+  }
+  h3 {
+    font-size: 0.9rem;
+    margin: 0.5rem 0 0 0;
+  }
 }
